:bug: Add missing hotelId param
